logs/validate.20260408-053255.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: expected delimiter
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:419:34
    |
419 |                         implies !#[trigger] old_table[j].spec_entry_to_map().dom().contains(*key) by {}
    |                                  ^

error[E0425]: cannot find type `LinkedListChainedHashTableStEph` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:623:30
    |
623 |     impl std::fmt::Debug for LinkedListChainedHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LinkedListChainedHashTableStEph` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:629:32
    |
629 |     impl std::fmt::Display for LinkedListChainedHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 24333MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
